# KinderColoring

./: Arco.cpp  Arco.h  CMakeLists.txt  Nodo.cpp  Nodo.h  main.cpp
FileManagers/Headers/: FileManager.h  FileManagerFactory.h  StringSplitter.h  XmlManager.h
FileManagers/Sources/: FileManager.cpp  FileManagerFactory.cpp  StringSplitter.cpp  XmlManager.cpp
Headers/: BacktrackingPainter.h  Country.h  DivideConquerPainter.h  DynamicPainter.h  LInkedList.cpp  LInkedList.h  LinkedList.h  Node.h  Painter.h  SvgManager.h  XmlManager.h
Models/Headers/: AbstractMapBuilder.h  ColorType.h  Country.h  CountryFactory.h  Map.h  MapBuilder.h  MapDirector.h  MapNode.h  MapNodeFactory.h
Models/Sources/: AbstractMapBuilder.cpp  ColorType.cpp  Country.cpp  CountryFactory.cpp  Map.cpp  MapBuilder.cpp  MapDirector.cpp  MapNode.cpp  MapNodeFactory.cpp
Painters/Headers/: BacktrackingPainter.h  DivideConquerPainter.h  DynamicPainter.h  Painter.h  PainterFactory.h
Painters/Sources/: BacktrackingPainter.cpp  DivideConquerPainter.cpp  DynamicPainter.cpp  Painter.cpp  PainterFactory.cpp
Sources/: BacktrackingPainter.cpp  ColorSet.cpp  Country.cpp  DivideConquerPainter.cpp  DynamicPainter.cpp  LinkedList.cpp  Main.cpp  Node.cpp  Painter.cpp  SvgManager.cpp  XmlManager.cpp
_Libraries/rapidxml-1.13/: rapidxml_print.hpp  rapidxml_utils.hpp
